<resources>
    <string name="action_share">Share</string>
    <string name="action_edit">Edit</string>
    <string name="app_name">LEISHENG</string>
    <string name="UserName">UserName</string>
    <string name="balance">balance</string>
    <string name="Welcome">welcome to Iotek</string>
    <string name="balance2">balance_Lack</string>
    <string name="ok">OK</string>
    <string name="PWD">PassWord</string>
    <string name="register">Register</string>
    <string name="enterUserName">Input_Name</string>
    <string name="enterPWD">Input_password</string>
    <string name="TVScore">PlayerScore</string>
    <string name="TVName">PlayerName</string>
    <string name="language">Language</string>
    <string name="chek_chinese">chinese</string>
    <string name="chek_English">English</string>
    <string name="chek_jap">japanse</string>
    <string name="chkI">Iitaic</string>
    <string name="chkB">Bold</string>
    <string name="charge">Charge</string>
    <string name="submit">Submit</string>
    <string name="Close">Close</string>
    <string name="Open">Open</string>
    <string name="background_music">Background_Music</string>
    <string name="game_voice">Game_Voice</string>
    <string name="gameplane_style">Game_Style</string>
    <string name="plane_sytle1">plane_style1</string>
    <string name="plane_sytle2">plane_style2</string>
    <string name="plane_sytle3">plane_style3</string>
    <string name="score">10000</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">hello!world</string>
    <string name="test">this is test</string>
    <string-array name="arryTest">
        <item>AAA</item>
        <item>BBB</item>
        <item>CCC</item>
    </string-array>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Next">Next</string>
    <string name="pre">Previous</string>
    <string-array name="Course">
        <item>C语言</item>
        <item>C++8语言</item>
        <item>JAVA8语言</item>
        <item>ANDROID语言</item>
    </string-array>
    <string name="ADD">add</string>

    <string-array name="num">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="TabSpec">TabSpec</string>
    <string name="StartGame">StartGame</string>
    <string name="GameDownLoadFinsh">GameDownLoading...</string>
    <string name="haveSaved">haveSaved</string>
    <string name="this_is_Test">This is Test</string>
    <string name="Count">count</string>
    <string name="Finish">Finish</string>
    <string name="SecondActivity">SecondActivity</string>
    <string name="Test">Test</string>
    <string name="StartService">StartService</string>
    <string name="StopService">StopService</string>
    <string name="BindService">BindService</string>
    <string name="UnBindService">UnBindService</string>
    <string name="GetBindValue">获得Bind值</string>
    <string name="SEX">SEX:</string>
    <string name="Height">height</string>
    <string name="calculate">calculate</string>
    <string name="Notification">Notification</string>
    <string name="BroadCastReceiver">BroadCastReceiver</string>
    <string name="UnBroadCastReceiver">UnBroadCastReceiver</string>
    <string name="BatteryBroadCastReceiver">BatteryBroadCastReceiver</string>
    <string name="InstallPreference">InstallPreference</string>
    <string name="LoadPreference">LoadPreference</string>
    <string name="SaveButton">save button</string>
    <string name="LoadButton">LoadButton</string>
    <string name="ExternalStorage">ExternalStorage</string>
    <string name="XmlPullParse">XmlPullParse</string>
    <string name="btn_create_table">btn_create_table</string>
    <string name="btn_insert">btn_insert</string>
    <string name="insert">insert</string>
    <string name="APPName1">APPName1</string>
    <string name="Select">Select</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Refresh">Refresh</string>
    <string name="Play">Play</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="GetWebData">GetWebData</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="LIji_Login">立即登录</string>
    <string name="get">get请求</string>
    <string name="post请求">post请求</string>
    <string name="请求json数据">请求json数据</string>
    <string name="imageRequest">imageRequest加载图片</string>
    <string name="imageLoader加载图片">imageLoader加载图片</string>
    <string name="NetWorkImageView">NetWorkImageView加载图片</string>
    <string name="get_json_data">请求json数据</string>
    <string name="Result">显示结果</string>
    <string name="Json_javaobject">将JSON对象转换为JAVA对象</string>
    <string name="JsonArray_JavaList">将JSON数组转换为JAVA集合</string>
    <string name="ComplexJSON_Parse">复杂的JSON数据解析</string>
    <string name="Specil_JSON_Parse">特殊JSON数据解析</string>
    <string name="app_name1">定位</string>

    <string name="txtLong">经度:</string>

    <string name="txtLat">纬度:</string>

    <string name="loc">定位</string>

    <string name="lng">113.395563</string>

    <string name="lat">23.126222</string>

    <string name="gps">GPS定位</string>

    <string name="manul">手动定位</string>

    <string name="txtAddress">地址:</string>

    <string name="address">沣宏大厦</string>

    <string name="parse">解析</string>

    <string name="reverse">反向解析</string>

    <string name="targetAddress">华南农业大学</string>

    <string name="nav">规划路线</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
