<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/bt_volley_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get" />

    <Button
        android:id="@+id/bt_volley_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post请求" />

    <Button
        android:id="@+id/bt_volley_getjson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_json_data" />

    <Button
        android:id="@+id/bt_volley_imageRequet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imageRequest" />

    <Button
        android:id="@+id/bt_volley_imageloader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imageLoader加载图片" />

    <Button
        android:id="@+id/bt_volley_networkimageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NetWorkImageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Result" />

    <ImageView
        android:id="@+id/iv_volley_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/iv_volley_networkimagview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:visibility="gone"></com.android.volley.toolbox.NetworkImageView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_volley_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </ScrollView>


</LinearLayout>
