<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:text="@string/language"
        android:layout_width="458dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_weight="0.04" />

    <CheckBox
        android:text="@string/chek_chinese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chek_chinese"
        android:layout_weight="0.04" />

    <CheckBox
        android:text="@string/chek_English"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chek_English"
        android:layout_weight="0.04" />

    <CheckBox
        android:text="@string/chek_jap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chek_jap"
        android:layout_weight="0.04" />
</LinearLayout>
