<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gamebackground">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        android:stretchColumns="2">

        <TableRow>
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
            <TextView
                android:text="@string/UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvUserName"
                android:gravity="center_vertical"
                android:layout_gravity="center" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edit_user"
                android:layout_weight="1"
                android:layout_gravity="left" />
        </TableRow>
        <TableRow>
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPassWord"
                android:gravity="center_vertical"
                android:layout_gravity="center"
                tools:text="@string/PWD"
                android:text="@string/PWD" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edit_password"
                android:layout_weight="1"
                android:layout_gravity="left" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="54dp">

        <Button
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_ok"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_cancel"
            android:layout_weight="1"
            android:text="@string/Cancel" />
    </LinearLayout>


</LinearLayout>
