<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/TVScore"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/TVScore" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/TVScore"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />

    <EditText
        android:id="@+id/TVName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/TVScore"
        android:layout_toRightOf="@+id/textView5"
        android:hint="请输入名字"
        android:inputType="textPersonName" />

    <TextView
        android:text="@string/TVName"
        android:layout_width="wrap_content"
        android:layout_height="13dp"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btOk" />

    <Button
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btOk"
        android:layout_below="@+id/TVName"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
